--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "jspdf": "^2.5.1",
     "ng-multiselect-dropdown": "^1.0.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-clipboard": "^16.0.0",
