--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "core-js": "^3.35.0",
     "file-server": "^2.2.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "ng-multiselect-dropdown": "^1.0.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-clipboard": "^16.0.0",
+    "raf": "^3.4.1",
+    "rgbcolor": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
