--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,10 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "canvg",
+              "html2canvas"
             ]
           },
           "configurations": {
