--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
+    "@videogular/ngx-videogular": "^8.0.0",
     "bootstrap": "^5.3.2",
     "core-js": "^3.35.0",
     "file-server": "^2.2.1",
@@ -43,6 +44,7 @@
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
+    "@types/core-js": "^2.5.8",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
