--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "rewardsapp-frontend",
+  "name": "msg-recycling-rewards-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
